--- a/index.html
+++ b/index.html
@@ -328,13 +328,12 @@ margin-top:950px;
 
 
 
-<center><div class="contact">
-<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><a name="contactlink">contact&nbsp;&nbsp;&nbsp;</a></h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div></center>
-
+<div class="contact">
+<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><a name="contactlink">contact&nbsp;&nbsp;&nbsp;</a></h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div>
 
 <div class="thanksyou">
 <center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
-<center><h2><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"> < thank you, for visiting me ><br><3<br><br></p></center>
+<div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
 
 
 
