--- a/experimentieren.html
+++ b/experimentieren.html
@@ -319,7 +319,7 @@ margin-top:950px;
 <div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
 <h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">// Sweet Demon //</h2>
 
-<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>her first ever released single</p></p></div.sweetdemon>
+<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>my first ever released single</p></p></div.sweetdemon>
 
 <div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
 <span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">// We Can't Be the Judged Ones,<br>If There's No One to Judge Us //</p>
