--- a/index.html
+++ b/index.html
@@ -201,13 +201,7 @@ z-index:1
   }  
   
 
-div.absolute {
-  position: absolute;
-  bottom: 17px;
-  right: 15px;
-  width: 400px;
-  text-align: right;
-}
+
 
   a.two {
 color:#00FF00;
@@ -228,28 +222,20 @@ a.two:hover {
 
 
 .about {
-position: relative;
-  right: 0px;
-  top: 300px;
+margin-top:300px;
 }
 
 
- .sweetdemon {
-position: relative;
-  left: 0px;
-  top: 280px;
+.sweetdemon {
+margin-top:300px;
 }
 
- .ghibli {
-position: relative;
- left: 0px;
-  top: 280px;
+.ghibli {
+margin-top:400px;
 }
 
 .contact {
-position: relative;
-  right: 0px;
-  top: 730px;
+margin-top: 800px;
 }
 
 .centered3 {
@@ -261,7 +247,7 @@ margin-top:250px;
 }
 
 .thanksyou {
-margin-top:950px;
+margin-top:450px;
 }
 
 
@@ -304,35 +290,47 @@ margin-top:950px;
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
+<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:5px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">.about amygdala_amara {</span></p> 
+<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.
+</span></p> 
+<p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">}</span></p> 
+</div>
 
 
-<div class="about"><img src="lila.png" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><br><a name="aboutamygdalaamara">.about amygdala_amara {</a></h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.</p><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">}</h2></div.about>
 
 <div class="music">
 <center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><a name="musiclink">*</a><br>*<br>*<br></center></p>
 
 <center><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">music</h2></center><center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">listen to my music on:<br><a class="five" href="spotify:artist:5ow5XVwCOfNy3rifz6KSoF"target="_blank">  {spotify}  </a><a class="five" href="https://music.apple.com/de/artist/amygdala-amara/1513588735">  {apple music}  </a><a class="five" href="https://www.amazon.de/Sweet-Demon-amygdala_amara/dp/B08951QFCW/ref=sr_1_1?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=amygdala_amara&qid=1591103093&sr=8-1"target="_blank">  {amazon music}  </a><a class="five" href="https://music.youtube.com/channel/UCMAxL753zYWHUjJMRNLlPPQ"target="_blank">  {youtube music}  </a><br><br><br>*<br>*<br>*<br></p></center>
-
 </div>
 
 
-<div class="sweetdemon"><img src="sweetdemon.png" align="left" width="300px" height="300px" hspace=20>
-<h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="left">// Sweet Demon //</h2>
-
-<p align="left"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>my first ever released single</p></p></div.sweetdemon>
-
-<div class="ghibli"><img src="ghibli.png" align="right" width="300px" height="300px" hspace=20>
-<span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right">// We Can't Be the Judged Ones,<br>If There's No One to Judge Us //</p>
-
-<p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>will be released on 6/26</p></div.ghibli>
+<div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:5px;">
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//Sweet Demon//</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
 
 
+<div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:5px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">//We Can't Be the Judged Ones,<br> If There's No One to Judge Us//</span></p> 
+<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
+</div>
 
-<div class="contact">
-<img src="coverblackgreen.jpg" align="right" width="290px" height="292px" hspace=20><p class="about2"><h2><span style="font-size:16px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><p align="right"><a name="contactlink">contact&nbsp;&nbsp;&nbsp;</a></h2><p align="right"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter"><br>for any requests mail me:&nbsp;&nbsp;&nbsp;&nbsp;<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de&nbsp;&nbsp;&nbsp;&nbsp;</a><br>_ _ _ _ _ _ _&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;<br>|&nbsp;&nbsp;&nbsp;&nbsp;</p></p></div>
+
+<div class="contact"><img src="coverblackgreen.jpg" width="290px" height="292px" style="float: left; margin-right:30px; margin-bottom:5px;">
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="contactlink">contact</a></span>
+<p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
+_ _ _ _ _ _ _<br>
+|<br>
+|<br>
+|<br>
+|<br>
+|<br>
+|<br>
+|<br>
+|<br></span></p></div>
+
+
 
 <div class="thanksyou">
-<center><p class="music"><span style="font-size:12px"><span style="color:#00FF00"><span style="font-family:'Courier New',Arial;"><span style="font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
+<center><p class="music"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">^<br>^<br>\&nbsp;&nbsp; ^ &nbsp;&nbsp;/<br></center></p>
 <div class="gif"><center><img src="a_a gif.gif" width="177" height="68"></center></div>
 
 
