--- a/index.html
+++ b/index.html
@@ -222,20 +222,20 @@ a.two:hover {
 
 
 .about {
-margin-top:300px;
+margin-top:19em;
 }
 
 
 .sweetdemon {
-margin-top:300px;
+margin-top:19em;
 }
 
 .ghibli {
-margin-top:400px;
+margin-top:25em;
 }
 
 .contact {
-margin-top: 550px;
+margin-top: 34em;
 position: absolute;
 left: 30%;
 right: 30%;
@@ -243,15 +243,15 @@ transform: translate (25%,25%);
 }
 
 .centered3 {
-margin-top:110px;
+margin-top:8em;
 }
 
 div.music {
-margin-top:250px;
+margin-top:16em;
 }
 
 .thanksyou {
-margin-top:1050px;
+margin-top:66em;
 }
 
 
