--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ margin-top:16em;
 }
 
 .thanksyou {
-margin-top:70em;
+margin-top:60em;
 }
 
 
@@ -328,7 +328,7 @@ _ _ _ _ _ _ _<br>
 |<br>
 |<br>
 |<br>
-|<br></span></p></div>
+|<br></span></p></div><br><br><br><br>
 
 
 <div class="thanksyou">
