--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ margin-top:10em;
 --><a class="four" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"> pre-save! </a><-- <br>|<br>|<br>|<br>|</h2></center></div>
 
 
-<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">.about amygdala_amara {</span></p> 
+<div class="about"><img src="lila.png" width="290px" height="292px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><a name="aboutamygdalaamara">.about amygdala_amara {</a></span></p> 
 <p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>amygdala_amara is a musician from berlin, <br>who started making alternative pop music,<br> because studying medicine left too much free<br> space in her time squedule. It's also rumored,<br> that she doesn't have infact too much time, but<br> too much struggle making music and not<br>failing the exams, but the music thing is<br> much more fun.
 </span></p> 
 <p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">}</span></p> 
