--- a/index.html
+++ b/index.html
@@ -317,22 +317,24 @@ margin-top:10em;
 
 
 <div class="sweetdemon"><img src="sweetdemon.png" width="300px" height="300px" style="float: left; margin-right:30px; margin-bottom:30px;">
-<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single</span></p></div>
+<span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">Sweet_Demon</span><p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>my first single<br>watch the <a class="two" href="https://www.youtube.com/watch?v=SxNuDlTxCuk"target="_blank">//music video//</a></span></p></div>
 
 
 <div class="ghibli"><img src="ghibli.png" width="300px" height="300px" align="right" style="float: right; margin-left:30px; margin-bottom:30px;"><p align="right"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">We_Can't_Be_the_Judged_Ones,<br> If_There's_No_One_to_Judge_Us</span></p> 
-<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26</span></p> 
+<p align="right"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br>will be released on 6/26<br>you can <a class="two" href="https://distrokid.com/hyperfollow/amygdalaamara/we-cant-be-the-judged-ones-if-theres-no-one-to-judge-us-2"target="_blank">//pre-save//</a> it on spotify</span></p> 
 </div>
 
 <div class="preangel">
-<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
+<center><p class="preangel"><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">|<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ | _<br>|<br>|<br>_ | _<br>_ _ | _ _<br>_ _ _ | _ _ _<br>_ _ | _ _<br>_ | _<br>|</p></center></div>
 
 <div class="angel"><a name="contactlink"><img src="angel.jpg" width="100%"></a></div>
 
 <center><div class="contact"><span style="font-size:16px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter">contact</span>
 <p><span style="font-size:12px; color:#00FF00; font-family:'Courier New',Arial; font-weight: lighter"><br><br>for any requests mail me:<br><a class="two" href= "mailto:contact@amygdala-amara.de">contact@amygdala-amara.de</a><br>
-_ _ _ _&nbsp;&nbsp;&nbsp;_ _ _ _<br>
-\/<br>
+_ _ _ _ _ _ _ _ _ _<br>
+_ _ | _ _<br>
+_ | _<br>
+|<br>
 _ | _<br>
 _ _ | _ _<br>
 _ | _<br>
