--- a/index.html
+++ b/index.html
@@ -291,12 +291,13 @@ box-shadow: 0em 0em 0.5em 0.001em #b71c1c;
 
 body, html {
   height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .parallax {
   background-image: url('blue.jpg');
 margin-top:16em;
-  height: 200%; 
+  height: 90em; 
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
